src/parse/snapshots/camello__parse__tests__success__lt_with_comment.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  EXPR_STMT
    LIST_EXPR
      BINARY_EXPR
        SCALAR_VAR
          `$` "$"
          identifier "var"
        `<` "<"
        LIST_CALL_EXPR
          SUB_NAME
            identifier "foo"
