src/parse/snapshots/camello__parse__tests__success__paren_expr_array_subscription.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  EXPR_STMT
    LIST_EXPR
      ARRAY_SUBSCRIPT_EXPR
        PAREN_EXPR
          `(` "("
          LIST_EXPR
            LIST_CALL_EXPR
              SUB_NAME
                identifier "H"
          `)` ")"
        `[` "["
        SUBSCRIPT
          LITERAL
            number "1"
        `]` "]"
    `;` ";"
