src/parse/snapshots/camello__parse__tests__success__sort_function_reference.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  SUB_DEF
    `sub` "sub"
    SUB_NAME
      identifier "custom"
    BLOCK
      `{` "{"
      EXPR_STMT
        LIST_EXPR
          BINARY_EXPR
            SCALAR_VAR
              `$` "$"
              identifier "a"
            `<=>` "<=>"
            SCALAR_VAR
              `$` "$"
              identifier "b"
      `}` "}"
  VAR_DECL_STMT
    LIST_EXPR
      VAR_DECL
        `my` "my"
        DECL_TARGET
          ARRAY_VAR
            `@` "@"
            identifier "values"
    `;` ";"
  VAR_DECL_STMT
    LIST_EXPR
      ASSIGN_EXPR
        VAR_DECL
          `my` "my"
          DECL_TARGET
            SCALAR_VAR
              `$` "$"
              identifier "cmp"
        `=` "="
        REFERENCE_EXPR
          `\` "\\"
          CODE_VAR
            `&` "&"
            identifier "custom"
    `;` ";"
  VAR_DECL_STMT
    LIST_EXPR
      ASSIGN_EXPR
        VAR_DECL
          `my` "my"
          DECL_TARGET
            ARRAY_VAR
              `@` "@"
              identifier "sorted"
        `=` "="
        LIST_CALL_EXPR
          SUB_NAME
            identifier "sort"
          FILEHANDLE
            SCALAR_VAR
              `$` "$"
              identifier "cmp"
          LIST_EXPR
            ARRAY_VAR
              `@` "@"
              identifier "values"
    `;` ";"
  VAR_DECL_STMT
    LIST_EXPR
      ASSIGN_EXPR
        VAR_DECL
          `my` "my"
          DECL_TARGET
            ARRAY_VAR
              `@` "@"
              identifier "other"
        `=` "="
        LIST_CALL_EXPR
          SUB_NAME
            identifier "sort"
          LIST_EXPR
            LIST_CALL_EXPR
              SUB_NAME
                identifier "custom"
              LIST_EXPR
                ARRAY_VAR
                  `@` "@"
                  identifier "values"
    `;` ";"
